--- a/index.html
+++ b/index.html
@@ -4,16 +4,42 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans&display=swap" rel="stylesheet">
-    <style> @import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans&display=swap'); </style>
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Merriweather+Sans&display=swap");
+    </style>
     <title>Portfolio</title>
   </head>
   <body>
-
-    <header>Cabeçalho</header>    
-    <aside>Lateral</aside>
-    <main>Principal</main>
-    <footer>Rodapé</footer>
+    <div class="container">
+      <header>Cabeçalho</header>
+      <main>
+        Principal
+        <!--
+      <div id="meusProjetos"></div>
+      <div id="projeto1"></div>
+      <div id="projeto2"></div>
+      <div id="tituloPostRecente"></div>
+      <div id="post"></div>
+    -->
+      </main>
+      <aside>
+        Lateral
+        <!--
+      <div id="profile"></div>
+      <div id="links"></div>
+      <div id="tecnologias"></div>
+      <div id="experiencias"></div>
+      <div id="educacao"></div>
+        -->
+      </aside>
+      <footer>Rodapé</footer>
+    </div>
   </body>
 </html>
