--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
 
-    <div id="container">
+    <div class="container">
 
     <aside>
       <div class="profile">
@@ -46,7 +46,7 @@
         <h2>meusProjetos</h2>
       </div>
 
-      <div id="projetosFlex">
+      <div class="projetosFlex">
 
       <div class="projeto1">
         <h2>Projeto 1</h2>
