--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <aside>
       <div class="profile">
-        <img src="" alt="" />
+        <img src="./assets/imgFotoPerfil.jpg" alt="foto de perfil"/>
         <h2>Márcio José Baldo</h2>
         <p>Técnicos em Sistemas</p>
       </div>
@@ -44,6 +44,7 @@
     <main>
       <div class="meusProjetos">
         <h2>Meus Projetos</h2>
+        <p>Veja todos</p>
       </div>
 
       <div class="projetosFlex">
