--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <p>Técnicos em Sistemas</p>
         </div>
         <div class="links">
-          <div class="linksFormatacao">
+          <div class="linksImagens">
             <img src="./assets/map-pin.svg" alt="ícone do pin de mapa" />
             <p>Brasil</p>
             <img src="./assets/briefcase.svg" alt="ícone da maleta" />
@@ -45,12 +45,65 @@
         </div>
         <div class="tecnologias">
           <h2>Tecnologias</h2>
+          <div class="tecnologiasGrupo">
+            <p>JAVASCRIPT</p>
+            <p>REACTJS</p>
+            <p>NODEJS</p>
+            <p>GIT</p>
+            <p>GITHUB</p>
+            <p>HTML</p>
+            <p>CSS</p>
+            <p>ELIXIR</p>
+            <p>REACT NATIVE</p>
+          </div>
         </div>
         <div class="experiencias">
           <h2>Experiências</h2>
+          <ul>
+            <li>
+              <p class="experienciasEmpresa">Info Usado</p>
+            </li>
+          </ul>
+          <p class="experienciasPeriodo">2019 - Atualmente</p>
+          <p class="experienciasDescricao">Peças usadas de informática</p>
+          <ul>
+            <li>
+              <p class="experienciasEmpresa">TI Verde</p>
+            </li>
+          </ul>
+          <p class="experienciasPeriodo">2016 - Atualmente</p>
+          <p class="experienciasDescricao">Lixo eletrônico</p>
+          <ul>
+            <li>
+              <p class="experienciasEmpresa">SEBRAE</p>
+            </li>
+          </ul>
+          <p class="experienciasPeriodo">2014 - 2016</p>
+          <p class="experienciasDescricao">Agente Local de Inovação</p>
         </div>
         <div class="educacao">
           <h2>Educação</h2>
+          <ul>
+            <li>
+            <p class="educacaoInstituicao">SENAI</p>
+            </li>
+          </ul>
+          <p class="educacaoPeriodo">2022-2023</p>
+          <p class="educacaoTipo">Técnico em Desenvolvimento de Sistemas</p>
+          <ul>
+            <li>
+              <p class="educacaoInstituicao">SENAI</p>
+              </li>
+          </ul>
+          <p class="educacoPeriodo">2022-2023</p>
+          <p class="educacaoTipo">Técnico em Eletrônica</p>
+          <ul>
+            <li>
+              <p class="educacoInstituicao">UNEMAT</p>
+            </li>
+          </ul>
+          <p class="educacaoPeriodo">2009-2012</p>
+          <p class="educacaoTipo">Graduação</p>
         </div>
       </aside>
       <main>
