--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <div class="container">
       <aside>
         <div class="profile">
-          <img src="./assets/imgFotoPerfil.jpg" alt="foto de perfil" />
+          <img src="./assets/imgFotoPerfil.png" alt="foto de perfil" />
           <h2>Márcio José Baldo</h2>
-          <p>Técnicos em Sistemas</p>
+          <p>Técnico em Sistemas</p>
         </div>
         <div class="links">
           <div class="linksImagens">
@@ -85,7 +85,7 @@
           <h2>Educação</h2>
           <ul>
             <li>
-            <p class="educacaoInstituicao">SENAI</p>
+              <p class="educacaoInstituicao">SENAI</p>
             </li>
           </ul>
           <p class="educacaoPeriodo">2022-2023</p>
@@ -93,9 +93,9 @@
           <ul>
             <li>
               <p class="educacaoInstituicao">SENAI</p>
-              </li>
+            </li>
           </ul>
-          <p class="educacoPeriodo">2022-2023</p>
+          <p class="educacaoPeriodo">2022-2023</p>
           <p class="educacaoTipo">Técnico em Eletrônica</p>
           <ul>
             <li>
@@ -114,10 +114,79 @@
 
         <div class="projetosFlex">
           <div class="projeto1">
-            <h2>Projeto 1</h2>
+            <div class="orgIconDesc">
+              <img
+                class="projeto1Icone"
+                src="./assets/folder.svg"
+                alt="ícone de pasta"
+              />
+              <p class="nomeProjeto1Titulo">my-onix</p>
+            </div>
+
+            <p class="projeto1Descricao">
+              Consulte os códigos de erro que aparecem no painel do veículo
+              Onix.
+            </p>
+
+            <div class="orgInferiorGeral">
+              <div class="orgIconInf">
+                <img
+                  class="projeto1Icone2"
+                  src="./assets/star.svg"
+                  alt="ícone da estrela"
+                />
+                <p class="qtdeIcone2">100</p>
+                <img
+                  class="projeto1Icone3"
+                  src="./assets/git-branch.svg"
+                  alt="ícone do git-branch"
+                />
+                <p class="qtdeIcone3">100</p>
+              </div>
+
+              <div class="orgPeCirculo">
+                <div class="circulo"></div>
+                <p>JavaScript</p>
+              </div>
+            </div>
           </div>
+
           <div class="projeto2">
-            <h2>Projeto 2</h2>
+            <div class="orgIconDesc">
+              <img
+                class="projeto2Icone"
+                src="./assets/folder.svg"
+                alt="ícone de pasta"
+              />
+              <p class="nomeProjeto2Titulo">my-onix</p>
+            </div>
+
+            <p class="projeto2Descricao">
+              Consulte os códigos de erro que aparecem no painel do veículo
+              Onix.
+            </p>
+
+            <div class="orgInferiorGeral">
+              <div class="orgIconInf">
+                <img
+                  class="projeto2Icone2"
+                  src="./assets/star.svg"
+                  alt="ícone da estrela"
+                />
+                <p class="qtdeIcone2">100</p>
+                <img
+                  class="projeto2Icone3"
+                  src="./assets/git-branch.svg"
+                  alt="ícone do git-branch"
+                />
+                <p class="qtdeIcone3">100</p>
+              </div>
+
+              <div class="orgPeCirculo">
+                <div class="circulo"></div>
+                <p>JavaScript</p>
+              </div>
+            </div>
           </div>
         </div>
 
